--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mutechromecastads"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["rikyiso01 <riky.isola@gmail.com>"]
 readme = "README.md"
@@ -14,3 +14,6 @@ PyChromecast = "9.4.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+mutechromecastads = 'mutechromecastads:main'
